--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,10 @@ SYNC_LOADER_BATCH_SIZE=10000
 
 SYNC_EXTRACTOR_THREAD_POOL_SIZE=6
 SYNC_LOADER_THREAD_POOL_SIZE=6
+
+
+TEMPORAL_ACTIVITY_START_TO_CLOSE_IN_SEC=172800
+TEMPORAL_ACTIVITY_HEARTBEAT_TIMEOUT_IN_SEC=120
+TEMPORAL_ACTIVITY_RETRY_INTERVAL_IN_SEC=1
+TEMPORAL_ACTIVITY_RETRY_BACK_OFF=1
+TEMPORAL_ACTIVITY_RETRY_MAX_ATTEMPT=3
