--- a/.github/workflows/ui-validate.yml
+++ b/.github/workflows/ui-validate.yml
@@ -1,12 +1,17 @@
-name: Validate Workflow
+name: UI - Validate Workflow
 
 on:
   push:
     branches:
       - main
+    paths:
+      - "ui/**"
   pull_request:
     branches:
-      - develop
+      - main
+    paths:
+      - "ui/**"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,11 +22,16 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: "18"
 
       - name: Install dependencies
         run: npm install
+        working-directory: ./ui
+
       - name: Build Source Code
         run: npm run build
+        working-directory: ./ui
+
       - name: Lint Source Code
         run: npm run lint
+        working-directory: ./ui
