--- a/ui/package.json
+++ b/ui/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "rollup": "^4.9.1",
+    "sql-formatter": "^15.3.0",
     "styled-components": "^6.1.1",
     "yup": "^1.3.3"
   },
