Update email config and add email notification push on sync run status change

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -90,3 +90,4 @@ end
 # gem "image_processing", "~> 1.2"  # For image variants if you decide to use Active Storage
 
 # NOTE: Removed unused or commented-out gems for better readability.
+gem "premailer-rails"
