Updated dockerfile and env to run docker-compose on prod mode.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
-# Rails 
+# Rails
 # ----------------------
-RAILS_ENV=development
+RAILS_ENV=production
 
 # HOST Configuration
 # ----------------------
 UI_HOST=localhost:8000
 API_HOST=localhost:3000
+
+VITE_API_HOST="http://localhost:3000"
 
 # Database Configuration
 # ----------------------
@@ -34,7 +36,7 @@ SNOWFLAKE_DRIVER_PATH=/usr/lib/snowflake/odbc/lib/libSnowflake.so
 # Temporal
 # ----------------------------
 TEMPORAL_VERSION=1.22.4
-TEMPORAL_UI_VERSION=2.21.3
+TEMPORAL_UI_VERSION=2.21.0
 TEMPORAL_HOST=temporal
 TEMPORAL_PORT=7233
 TEMPORAL_ROOT_CERT=/certs/temporal.pem
@@ -59,10 +61,3 @@ SYNC_LOADER_BATCH_SIZE=10000
 
 SYNC_EXTRACTOR_THREAD_POOL_SIZE=6
 SYNC_LOADER_THREAD_POOL_SIZE=6
-
-
-TEMPORAL_ACTIVITY_START_TO_CLOSE_IN_SEC=172800
-TEMPORAL_ACTIVITY_HEARTBEAT_TIMEOUT_IN_SEC=120
-TEMPORAL_ACTIVITY_RETRY_INTERVAL_IN_SEC=1
-TEMPORAL_ACTIVITY_RETRY_BACK_OFF=1
-TEMPORAL_ACTIVITY_RETRY_MAX_ATTEMPT=3
