--- a/.github/workflows/create-release-notes.yaml
+++ b/.github/workflows/create-release-notes.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ env.LATEST_TAG }}
           name: Release ${{ env.LATEST_TAG }}
           bodyFile: release-notes.md
