--- a/.github/workflows/integrations-ci.yml
+++ b/.github/workflows/integrations-ci.yml
@@ -28,3 +28,17 @@ jobs:
       - name: Run tests with code coverage
         run: COVERAGE=true bundle exec rspec
         working-directory: ./integrations
+
+      - name: Install Code Climate Test Reporter
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./integrations/cc-test-reporter
+          chmod +x ./integrations/cc-test-reporter
+        working-directory: ./integrations
+
+      - name: Push coverage data to Code Climate
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        run: |
+          ./integrations/cc-test-reporter before-build
+          ./integrations/cc-test-reporter after-build --exit-code $?
+        working-directory: ./integrations
