--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -1,6 +1,10 @@
 name: frontend-ci
 
 on:
+  push:
+    branches: [main]
+    paths:
+      - "ui/**"
   pull_request:
     paths:
       - "ui/**"
@@ -23,4 +27,18 @@ jobs:
 
       - name: Run tests and collect coverage
         run: npm test -- --coverage
+        working-directory: ./ui
+
+      - name: Upload coverage to Code Climate
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./ui/cc-test-reporter
+          chmod +x ./ui/cc-test-reporter
+          ./ui/cc-test-reporter before-build
+          if [ -f coverage/lcov.info ]; then
+            ./ui/cc-test-reporter after-build --exit-code $? --coverage-input-type lcov
+          else
+            echo "Coverage report not found."
+          fi
         working-directory: ./ui
