--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -58,13 +58,15 @@ jobs:
       - name: Install cc-test-reporter
         if: github.event_name == 'push'
         run: |
-          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./server/cc-test-reporter
-          chmod +x ./server/cc-test-reporter
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
         working-directory: ./server
 
       - name: Upload Coverage to Code Climate
         if: github.event_name == 'push'
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         run: |
-          ./server/cc-test-reporter before-build
-          ./server/cc-test-reporter after-build --exit-code $?
+          ./cc-test-reporter before-build
+          ./cc-test-reporter after-build --exit-code $?
         working-directory: ./server
