--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -33,11 +33,11 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         run: |
-          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./ui/cc-test-reporter
-          chmod +x ./ui/cc-test-reporter
-          ./ui/cc-test-reporter before-build
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+          ./cc-test-reporter before-build
           if [ -f coverage/lcov.info ]; then
-            ./ui/cc-test-reporter after-build --exit-code $? --coverage-input-type lcov
+            ./cc-test-reporter after-build --exit-code $? --coverage-input-type lcov
           else
             echo "Coverage report not found."
           fi
