fix: add spec for sync contract

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -34,13 +34,12 @@ gem "rack-cors"
 # AuthN & AuthZ
 gem "devise"
 gem "devise-jwt"
-
 # Utilities
 gem "activerecord_json_validator", "~> 2.1.0"
 gem "bootsnap", require: false # Reduces boot time
+gem "fugit"
 gem "pg_query"
 gem "tzinfo-data", platforms: %i[windows jruby] # Timezone data
-
 # Third-Party Tools for Monitoring, Error Reporting, etc.
 gem "newrelic_rpm"
 
