--- a/ui/package.json
+++ b/ui/package.json
@@ -47,7 +47,8 @@
     "rollup": "^4.9.1",
     "sql-formatter": "^15.3.0",
     "styled-components": "^6.1.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
