--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,9 @@
     "@tanstack/react-query-devtools": "^5.17.18",
     "chakra-react-select": "^4.7.6",
     "chart.js": "^4.4.2",
+    "cron-parser": "^4.9.0",
+    "cron-validator": "^1.3.1",
+    "dayjs": "^1.11.10",
     "flat": "^6.0.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
