--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -51,6 +51,8 @@ gem "net-sftp"
 
 gem "csv"
 
+gem "zendesk_api"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
