--- a/.github/workflows/ui-docker-hub-push-tags.yaml
+++ b/.github/workflows/ui-docker-hub-push-tags.yaml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -29,7 +32,7 @@ jobs:
           images: |
             multiwoven/multiwoven-ui
 
-      - name: Build and push server Docker image
+      - name: Build and push UI Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./ui
@@ -37,3 +40,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
