UI Docker build fix - github workflow error

--- a/.github/workflows/ui-docker-build.yml
+++ b/.github/workflows/ui-docker-build.yml
@@ -41,3 +41,4 @@ jobs:
             ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
             ${{ env.IMAGE_NAME }}:${{ github.sha }}
           platforms: linux/amd64,linux/arm64
+          no-cache: true
