--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm ci
 
 # Copy the rest of your application code
 COPY . .
