--- a/.github/workflows/ui-docker-hub-push-tags.yaml
+++ b/.github/workflows/ui-docker-hub-push-tags.yaml
@@ -40,5 +40,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+          load: true
           no-cache: true
