Docker build fix - arm platform

--- a/.github/workflows/ui-docker-hub-push-tags.yaml
+++ b/.github/workflows/ui-docker-hub-push-tags.yaml
@@ -40,6 +40,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64
+          platforms: linux/arm64
           load: true
           no-cache: true
