--- a/.github/workflows/ui-docker-hub-push-tags-arm.yml
+++ b/.github/workflows/ui-docker-hub-push-tags-arm.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   docker-hub-push-on-merge:
-    runs-on: [self-hosted, ARM]  # Targeting the self-hosted ARM runner
+    runs-on: [self-hosted, Linux, ARM64]  # Targeting the self-hosted ARM runner
 
     steps:
       - name: Checkout code
