--- a/.github/workflows/ui-docker-build.yml
+++ b/.github/workflows/ui-docker-build.yml
@@ -1,8 +1,8 @@
-name: frontend-docker-build-AMD
+name: frontend-docker-build
 
 on:
   workflow_run:
-    workflows: ["frontend-ci-amd"]
+    workflows: ["frontend-ci"]
     branches: [main]
     types:
       - completed
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build_and_push:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, ARM64]  # Targeting the self-hosted ARM runner
 
     steps:
       - name: Checkout Code
