--- a/.github/workflows/ui-docker-hub-push-tags.yaml
+++ b/.github/workflows/ui-docker-hub-push-tags.yaml
@@ -1,4 +1,4 @@
-name: Build and push Multiwoven UI docker image to Docker Hub
+name: Build and push Multiwoven server docker image to Docker Hub
 
 on:
   workflow_dispatch:
@@ -8,10 +8,16 @@ on:
 
 jobs:
   docker-hub-push-on-merge:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, ARM64]  # Targeting the self-hosted ARM runner
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -24,13 +30,14 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            multiwoven/multiwoven-ui
+            multiwoven/multiwoven-server
 
       - name: Build and push server Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./ui
-          file: ./ui/Dockerfile
+          context: ./server
+          file: ./server/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
