--- a/.github/workflows/ui-docker-build-amd.yml
+++ b/.github/workflows/ui-docker-build-amd.yml
@@ -1,4 +1,4 @@
-name: frontend-docker-build
+name: frontend-docker-build (AMD)
 
 on:
   workflow_run:
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build_and_push:
-    runs-on: [self-hosted, Linux, ARM64]  # Targeting the self-hosted ARM runner
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
@@ -40,4 +40,4 @@ jobs:
           tags: |
             ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
             ${{ env.IMAGE_NAME }}:${{ github.sha }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
