--- a/.github/workflows/ui-docker-hub-push-tags-arm.yaml
+++ b/.github/workflows/ui-docker-hub-push-tags-arm.yaml
@@ -1,43 +1,43 @@
-name: Build and push Multiwoven UI docker image to Docker Hub (ARM64)
+# name: Build and push Multiwoven UI docker image to Docker Hub (ARM64)
 
-on:
-  workflow_dispatch:
-  push:
-    tags:
-      - v*
+# on:
+#   workflow_dispatch:
+#   push:
+#     tags:
+#       - v*
 
-jobs:
-  docker-hub-push-on-merge:
-    runs-on: [self-hosted, Linux, ARM64]  # Targeting the self-hosted ARM runner
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+# jobs:
+#   docker-hub-push-on-merge:
+#     runs-on: [self-hosted, Linux, ARM64]  # Targeting the self-hosted ARM runner
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+#       - name: Set up QEMU
+#         uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v3
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            multiwoven/multiwoven-ui
+#       - name: Docker meta
+#         id: meta
+#         uses: docker/metadata-action@v5
+#         with:
+#           images: |
+#             multiwoven/multiwoven-ui
 
-      - name: Build and push UI Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./ui
-          file: ./ui/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/arm64
+#       - name: Build and push UI Docker image
+#         uses: docker/build-push-action@v5
+#         with:
+#           context: ./ui
+#           file: ./ui/Dockerfile
+#           push: true
+#           tags: ${{ steps.meta.outputs.tags }}
+#           labels: ${{ steps.meta.outputs.labels }}
+#           platforms: linux/arm64
