--- a/.github/workflows/ui-docker-hub-push-tags-amd.yml
+++ b/.github/workflows/ui-docker-hub-push-tags-amd.yml
@@ -1,4 +1,4 @@
-name: Build and push Multiwoven UI docker image to Docker Hub
+name: Build and push Multiwoven UI docker image to Docker Hub (amd64)
 
 on:
   workflow_dispatch:
@@ -40,4 +40,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
