New updated arm workflow - github action

--- a/.github/workflows/ui-docker-build-arm.yml
+++ b/.github/workflows/ui-docker-build-arm.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build_and_push:
-    runs-on: macos-latest-large
+    runs-on: macos-latest
 
     steps:
       - name: Checkout Code
