Added arm tags for Docker build

--- a/.github/workflows/ui-docker-hub-push-tags-arm.yml
+++ b/.github/workflows/ui-docker-hub-push-tags-arm.yml
@@ -32,5 +32,5 @@ jobs:
           context: ./ui
           file: ./ui/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}-arm
+          labels: ${{ steps.meta.outputs.labels }}-arm
