fix: wrong character to start inlineScript (#29)
* feat: auto-deploy main to staging

* feat: added workflow_dispatch to test deploying main

* chore: cleaning up for pull request

* fix: merged kubernetes context step into azure cli action step

* fix: added server to paths in push trigger

* chore: temp adding workflow_dispatch flag for testing

* fix: wrong character to start inlineScript

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -24,7 +24,7 @@ jobs:
           AZ_SUBSCRIPTION: ${{ secrets.AZ_SUBSCRIPTION }}
         with:
           azcliversion: latest
-          inlineScript: /
+          inlineScript: |
             az account set --subscription $AZ_SUBSCRIPTION
             az aks get-credentials --resource_group $AZ_RESOURCE_GROUP --name $AZ_AKS_CLUSTER
             
