--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -8,7 +8,9 @@ on:
     paths:
       - "ui/**"
       - "server/**"
-
+permissions:
+  id-token: write
+  contents: read
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,6 +21,7 @@ jobs:
       - name: Azure Login
         uses: Azure/login@v2.1.0
         with:
+          auth-type: IDENTITY
           client-id: ${{ secrets.AZ_CLIENT_ID }}
           tenant-id: ${{ secrets.AZ_TENANT_ID }}
           subscription-id: ${{ secrets.AZ_SUBSCRIPTION_ID }}
